# strai-engine

./: BUILD.bazel  CONTRIBUTING.rst  LICENSE  README.md  README.rst  SECURITY.md  WORKSPACE  build-docker.sh  conftest.py  launch-binary.sh  pytest.ini  ray_deps_setup.bzl  readme.md  semgrep.yml  strai.bzl  strai_deps_build_all.bzl  strai_deps_setup.bzl
bazel/: BUILD.cython  BUILD.jemalloc  python.bzl
binder/: requirements.txt
cpp/: BUILD.bazel  test_python_call_cpp.py  test_submit_cpp_job.py
cpp/example/: BUILD.bazel  example.cc
cpp/include/ray/: api.h
cpp/include/ray/api/: actor_creator.h  actor_handle.h  actor_task_caller.h  arguments.h  common_types.h  function_manager.h  internal_api.h  logging.h  metric.h  msgpack_adaptor.h  object_ref.h  overload.h  ray_config.h  ray_exception.h  ray_remote.h  ray_runtime.h  ray_runtime_holder.h  runtime_env.h  serializer.h  static_check.h  task_caller.h  task_options.h  type_traits.h  wait_result.h  xlang_function.h
cpp/src/ray/: api.cc
cpp/src/ray/runtime/: abstract_ray_runtime.cc  abstract_ray_runtime.h  local_mode_ray_runtime.cc  runtime_env.cc
cpp/src/ray/runtime/object/: local_mode_object_store.cc  local_mode_object_store.h  native_object_store.cc  native_object_store.h  object_store.cc  object_store.h
cpp/src/ray/runtime/task/: local_mode_task_submitter.cc  local_mode_task_submitter.h  native_task_submitter.h  task_executor.cc  task_submitter.h
cpp/src/ray/test/: api_test.cc  ray_remote_test.cc  serialization_test.cc  slow_function_test.cc
cpp/src/ray/test/cluster/: cluster_mode_test.cc  cluster_mode_xlang_test.cc  counter.cc  counter.h  plus.cc  plus.h  test_cross_language_invocation.py
cpp/src/ray/test/examples/: metric_example.cc  simple_job.cc  simple_kv_store.cc
cpp/src/ray/util/: function_helper.cc  function_helper.h  process_helper.cc  process_helper.h  util.cc  util.h
cpp/symbols/: ray_api_exported_symbols_linux.lds
docker/: README.md  fix-docker-latest.sh
docker/autoscaler/: README.md
docker/base-deps/: Dockerfile  README.md
docker/ray/: Dockerfile  README.md
docker/ray-ml/: Dockerfile  README.md  install-ml-docker-requirements.sh
docker/retag-lambda/: lambda_function.py
