cc_binary(
    name = "example",
    srcs = glob([
        "*.cc",
    ]),
    data = [
        "example.so",
    ],
    linkstatic = True,
    deps = [
        ":strai_api",
    ],
)

cc_binary(
    name = "example.so",
    srcs = glob([
        "*.cc",
    ]),
    linkopts = ["-shared"],
    linkstatic = True,
    deps = [
        ":strai_api",
    ],
)

cc_library(
    name = "strai_api",
    srcs = [
        "thirdparty/lib/libstrai_api.so",
    ],
    hdrs = glob([
        "thirdparty/include/**/*.h",
        "thirdparty/include/**/*.hpp",
    ]),
    linkopts = ["-Wl,-rpath,./"],
    strip_include_prefix = "thirdparty/include",
    visibility = ["//visibility:public"],
)
